renovate-ce/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: renovate-ce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: renovate-ce
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
  egress:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/16
        - 172.17.0.0/16
        - 172.18.0.0/16
        - 192.168.0.0/16
